# kimi-cli-project-manager

./: README.md  README.zh.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: index.html
docs/superpowers/plans/: 2026-06-29-kimi-project-desktop.md
src/: App.tsx  i18n.tsx  index.css  main.tsx  sound.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  kimi_import.rs  lib.rs  pty.rs
src/components/: AddProjectDialog.tsx  CommandInput.tsx  EditProjectDialog.tsx  ErrorBoundary.tsx  ProjectList.tsx  RightPanel.tsx  SearchBox.tsx  StatusDot.tsx  Terminal.tsx  Toast.tsx
src/store/: useAppStore.ts
tests/: App.test.tsx  setup.ts
tests/components/: EditProjectDialog.test.tsx
