[package]
name = "kimi-cli-project-manager"
version = "0.2.4"
description = "Kimi CLI Project Manager - multi-project manager for Kimi Code CLI"
authors = ["kimi-cli-project-manager"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kimi_cli_project_manager"
# Use rlib only because the MinGW linker on this Windows GNU toolchain fails
# with "export ordinal too large" when building cdylib/staticlib for Tauri v2.
# This is sufficient for the desktop target since main.rs links the rlib directly.
crate-type = ["rlib"]

[features]
default = []
tauri = ["dep:tauri", "dep:tauri-build", "dep:tauri-plugin-shell", "dep:tauri-plugin-dialog", "dep:chrono", "dep:uuid", "dep:portable-pty"]

[[bin]]
name = "kimi-cli-project-manager"
path = "src/main.rs"
required-features = ["tauri"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [], optional = true }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["std"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tauri = { version = "2.11.3", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
portable-pty = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"
